[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/art/Actors/Yellow Fish Swimming.png/1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Fish.gd" type="Script" id=2]
[ext_resource path="res://assets/art/Actors/Yellow Fish Swimming.png/0.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/5.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/3.png" type="Texture" id=5]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/4.png" type="Texture" id=6]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/0.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/1.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Actors/Yellow Fish Dead.png/2.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Actors/Screaming Fish.png/2.png" type="Texture" id=10]
[ext_resource path="res://assets/art/Actors/Screaming Fish.png/1.png" type="Texture" id=11]
[ext_resource path="res://assets/art/Actors/Screaming Fish.png/0.png" type="Texture" id=12]
[ext_resource path="res://assets/art/Actors/hp.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "swimming",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stay_dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 64 )

[node name="Fish" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "swimming"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AngryCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -50.0
margin_right = 20.0
margin_bottom = -47.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHealth" type="Sprite" parent="HealthBar"]
position = Vector2( 20, 2 )
texture = ExtResource( 13 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_Sprite_animation_finished"]
